@@ -34,6 +34,8 @@ WANT="1786.4025"
 WANT="1780.4025"
 # v0.16.2 - Tag Cc: lines as To: lines.
 WANT="1780.4029"
+# v0.17.4 - Discard the PGP signature
+WANT="1780.4023"
 
 if [ "$RESULT" != "$WANT" ] || [ $verbose -ne 0 ] ; then
     echo want: $WANT, have: $RESULT | tee $TMPDIR/$OUT
