@@ -12,6 +12,8 @@ Note:
 
 * Fix message reporting lack of config file.
 * Fix "Can't find '.MSG_COUNT'" problem in bogotune.
+* Fix defect that continues decoding base64/qp after invalid chars.
+* Ignore data portion of PGP signatures.
 
 0.17.?	2004-03-??
 
